--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(reservation_management_system)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(reservation_management_system main.cpp System.cpp System.h File.h User.cpp User.h Admin.cpp Admin.h Visitor.cpp Visitor.h)
+add_executable(reservation_management_system main.cpp System.cpp System.h File.h User.cpp User.h Admin.cpp Admin.h Visitor.cpp Visitor.h Attraction.cpp Attraction.h Form.cpp Form.h)
